home stretch.. fixed a small bug effecting sockets

--- a/client/src/components/CSS/Canvas.css
+++ b/client/src/components/CSS/Canvas.css
@@ -44,3 +44,9 @@ canvas {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
 }
+
+.color-square {
+  width: 50px;
+  height: 50px;
+  color: transparent;
+}
