--- a/client/src/pages/CSS/Home.css
+++ b/client/src/pages/CSS/Home.css
@@ -1,5 +1,5 @@
 .pre {
-  background-image: url(dandelion_still-transformed.png);
+  background-image: url(dandelionStart2.gif);
   height: 100vh;
   width: 100%;
   background-repeat: no-repeat;
